--- a/css/responsive.css
+++ b/css/responsive.css
@@ -272,7 +272,7 @@
 		min-height: 450px;
 	}
 	.home_banner_area .banner_inner {
-		min-height: 450px;
+		min-height: 600px;
 	}
 	.blog_banner .banner_inner .blog_b_text {
 		margin-top: 0px;
@@ -290,7 +290,7 @@
 		padding-bottom: 70px;
 	}
 	.main_title h2 {
-		font-size: 25px;
+		font-size: 24px;
 	}
 	/* Elements Area css
 	============================================================================================ */
@@ -342,14 +342,14 @@
 	/* Home Banner Area css
 	============================================================================================ */
     .home_banner_area .banner_inner .banner_content {
-		padding: 30px 15px;
 		margin-top: 0px;
+		text-align: center;
 	}
 	.banner_content .white_btn {
 		display: block;
 	}
 	.home_banner_area .banner_inner .banner_content h3 {
-		font-size: 24px;
+		font-size: 26px;
 	}
 	/* End Home Banner Area css
 	============================================================================================ */
